--- a/hapi/Dockerfile
+++ b/hapi/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12-stretch
+FROM node:12-alpine
 
 USER node
 
@@ -6,8 +6,11 @@ RUN mkdir /home/node/code
 
 WORKDIR /home/node/code
 
-COPY --chown=node:node . .
+# try to save some time by using the lock file durin npm ci
+COPY --chown=node:node package-lock.json package.json ./
 
 RUN npm ci
+
+COPY --chown=node:node . .
 
 CMD ["node", "index.js"]
